Fixed java 8 comple issues